--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   datasource:
     driverClassName: org.h2.Driver
@@ -7,3 +6,9 @@ spring:
     password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+jpa:
+  database-platform: org.hibernate.dialect.H2Dialect
+  properties:
+    hibernate:
+     show_sql: true
+     format_sql: true
