--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,19 @@
 spring:
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:forum
-    username: sa
-    password:
+    driverclassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/forum
+    username: root
+    password: root
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-jpa:
-  database-platform: org.hibernate.dialect.H2Dialect
-  properties:
-    hibernate:
-     show_sql: true
-     format_sql: true
+    properties:
+      hibernate:
+        show sql: true
+        format sql: true
+  h2:
+    console:
+      enabled: true
+jwt:
+  secret: secret
+
+
+
